# Eurelis-KB-Framework

./: .gitignore  Makefile  README.md  pyproject.toml
src/: requirements.txt
src/eurelis_kb_framework/: __init__.py  base_factory.py  class_loader.py  gradiochat.py  langchain_wrapper.py  main.py  types.py  utils.py
src/eurelis_kb_framework/acronyms/: __init__.py  acronyms_chain_wrapper.py  acronyms_document_transformer.py  acronyms_text_transformer.py
src/eurelis_kb_framework/addons/checker/: __init__.py  chat_checker.py  check_input.py  check_input_callback.py
src/eurelis_kb_framework/addons/output/: markdown_html_callback.py
src/eurelis_kb_framework/chains/: __init__.py
src/eurelis_kb_framework/chains/conversational_retrieval/: __init__.py
src/eurelis_kb_framework/checker/: __init__.py
src/eurelis_kb_framework/dataset/: __init__.py  dataset.py
src/eurelis_kb_framework/document_loaders/: __init__.py
src/eurelis_kb_framework/document_loaders/fs/: __init__.py
src/eurelis_kb_framework/document_loaders/list/: __init__.py  list_loader.py
src/eurelis_kb_framework/document_loaders/sitemap/: __init__.py
src/eurelis_kb_framework/document_loaders/url/: __init__.py
src/eurelis_kb_framework/document_transformers/: base.py
src/eurelis_kb_framework/document_transformers/html2text/: __init__.py
src/eurelis_kb_framework/document_transformers/urloutput/: __init__.py
src/eurelis_kb_framework/embeddings/: __init__.py
src/eurelis_kb_framework/embeddings/huggingface/: __init__.py
src/eurelis_kb_framework/embeddings/openai/: __init__.py
src/eurelis_kb_framework/llms/: __init__.py
src/eurelis_kb_framework/llms/huggingface/: __init__.py
src/eurelis_kb_framework/llms/openai/: __init__.py
src/eurelis_kb_framework/memory/: __init__.py  conversation_buffer_memory.py
src/eurelis_kb_framework/output/: __init__.py  base_console_output.py  logging_console_output.py  output.py  verbose_console_output.py
src/eurelis_kb_framework/parsers/: __init__.py  pdf.py
src/eurelis_kb_framework/retrievers/: __init__.py
src/eurelis_kb_framework/retrievers/selfquery/: __init__.py
src/eurelis_kb_framework/retrievers/vectorstore/: __init__.py
src/eurelis_kb_framework/text_splitter/: __init__.py
src/eurelis_kb_framework/text_transformers/: __init__.py
src/eurelis_kb_framework/vectorstores/: __init__.py
(+4 files in other folders)
